attempt to fix scroller display overflow on very small screens and 3+ columns

--- a/style.css
+++ b/style.css
@@ -2,9 +2,14 @@ body {
   font-family: monospace;
 }
 
-* {
-  word-wrap: break-word;
-  
+pre {
+    height: auto;
+    max-height: 200px;
+    overflow: auto;
+    background-color: #eeeeee;
+    word-break: normal !important;
+    word-wrap: normal !important;
+    white-space: pre !important;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -41,7 +46,7 @@ hr {
 .row {
   display: flex;
   flex-direction: row;
-  min-height:0px;
+  // min-height:0px;
 }
 
 .end {
@@ -84,14 +89,14 @@ pre {
 /* scrolling feeds, threads */
 
 .scroller {
-  width: 100%;
-}
-
-.scroller__wrapper {
-  flex: 1;
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.scroller__wrapper {
+  width: 100%;
+  flex: 1;
 }
 
 /* compose */
@@ -116,7 +121,7 @@ pre {
 }
 
 .message_meta {
-  margin-left: auto;
+  // margin-left: auto;
 }
 
 .message_meta > * {
